crates/rome_js_formatter/tests/specs/prettier/js/import-assertions/multi-types.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 119
expression: multi-types.js

---
# Input
```js
import json from "./foo.json" assert { type: "json", type: "bar" };

```

# Output
```js
import json from "./foo.json" assert { type: "json", type: "bar" };

```

# Errors
```
error[SyntaxError]: Duplicate assertion keys are not allowed
  ┌─ multi-types.js:1:40
  │
1 │ import json from "./foo.json" assert { type: "json", type: "bar" };
  │                                        ^^^^          ---- second use here
  │                                        │              
  │                                        First use of the key `type`


```


